--- a/app/views/app/nhsuk/download-app.html
+++ b/app/views/app/nhsuk/download-app.html
@@ -19,46 +19,22 @@
 
 <!-- Header goes inside this block -->
 {% block header %}
-  {{ header({
-      "showNav": "true",
-      "showSearch": "true",
-      "primaryLinks": [
-        {
-          "url"  : "#",
-          "label" : "Health A-Z"
-        },
-        {
-          'url' : '#',
-          'label' : 'Live Well'
-        },
-        {
-          'url'  : '#',
-          'label' : 'Care and support'
-        },
-        {
-          'url'  : '#',
-          'label' : 'Health news'
-        },
-        {
-          'url' : '#',
-          'label' : 'Services near you'
-        }
-      ]
-    })
-  }}
+{{ header({
+  "transactionalService": {
+      "name": " ",
+      "href": "whatevsURLhere"
+    },
+    "showNav": "false",
+    "showSearch": "false"
+  })
+}}
 {% endblock %}
 
 <!-- Breadcrumb goes inside this block -->
 {% block beforeContent %}
-  <nav class="nhsuk-breadcrumb nhs-app-breadcrumb" aria-label="Breadcrumb">
-    <div class="nhsuk-width-container">
-      <ol class="nhsuk-breadcrumb__list">
-        <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link" href="#">Home</a></li>
-        <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link" href="#">NHS services</a></li>
-      </ol>
-      <p class="nhsuk-breadcrumb__back"><a class="nhsuk-breadcrumb__backlink" href="#">Back</a></p>
-    </div>
-  </nav>
+
+
+
 
 
         <div class="nhsuk-global-alert" id="nhsuk-global-alert" role="complementary">
@@ -66,7 +42,9 @@
         <div class="nhsuk-grid-row">
         <div class="nhsuk-grid-column-full">
         <div class="nhsuk-global-alert__content">
-        <div class="nhsuk-global-alert__message"><h2>Coronavirus: do not leave your home</h2><p>Everyone must stay at home to help stop the spread of <a href="https://www.nhs.uk/conditions/coronavirus-covid-19/">coronavirus</a>.</p></div>
+        <div class="nhsuk-global-alert__message">
+          <p class="nhsuk-body-s nhsuk-u-margin-top-0"><strong>Coronavirus (COVID-19)</strong></p>
+          <p class="nhsuk-body-s nhsuk-u-margin-bottom-0">Get information about coronavirus on NHS.UK</p>        </div>
         </div></div></div></div></div>
 {% endblock %}
 
@@ -157,23 +135,19 @@
     "links": [
       {
         "URL": "#",
-        "label": "NHS sites"
+        "label": "Terms of use"
       },
       {
         "URL": "#",
-        "label": "About us"
+        "label": "Privacy policy"
       },
       {
         "URL": "#",
-        "label": "Contact us"
+        "label": "Help and support"
       },
       {
         "URL": "#",
-        "label": "Sitemap"
-      },
-      {
-        "URL": "#",
-        "label": "Our policies"
+        "label": "Accessibility statement"
       }
     ]
   })}}
