--- a/app/views/app/organ-donation/v2/register-decision.html
+++ b/app/views/app/organ-donation/v2/register-decision.html
@@ -32,6 +32,11 @@
     <div class="nhsuk-grid-column-two-thirds">
       <h1 class="nhsuk-heading-l">{{ contentTitle }}</h1>
 
+      {{ insetText({
+        "HTML": "<p>If you have not registered your decision, <a href=\"https://www.organdonation.nhs.uk/app/app-donation/\" title=\"External website\">changes to the law around organ donation may affect you</a>.</p>"
+      }) }}
+
+
 
       <div class="nhsuk-grid-row nhsuk-panel-group nhs-app-panel-group">
         <div class="nhsuk-grid-column-one-half nhsuk-panel-group__item nhs-app-text-align--center">
