--- a/app/views/app/v4/start.html
+++ b/app/views/app/v4/start.html
@@ -85,7 +85,7 @@
 
   <h2>To access your NHS services</h2>
 
-  <form action="/app/homepage/biometric-message-4?messageRead1=read&cookies=on&routeHome=/app/v5/index&routeSymptoms=/app/symptoms/v2/index&routeAppointments=/app/appointments/v6/pre-hub&routeMore=/app/more/v5/&routeMessaging=/app/send-a-message/v4/index&messagingIcon=False" method="post">
+  <form action="/app/v5/index?messageRead1=read&cookies=on&routeHome=/app/v5/index&routeSymptoms=/app/symptoms/v2/index&routeAppointments=/app/appointments/v6/pre-hub&routeMore=/app/more/v5/&routeMessaging=/app/send-a-message/v4/index&messagingIcon=False" method="post">
     <input class="nhsuk-button nhslogin-button nhs-app-u-button-full" type="submit" value="Continue with NHS login">
   </form>
 
