--- a/app/views/app/start.html
+++ b/app/views/app/start.html
@@ -85,7 +85,7 @@
 
   <h2>To access your NHS services</h2>
 
-  <form action="/app/homepage/biometric-message-4?messageRead1=read&cookies=on" method="post">
+  <form action="/app/v5/index?messageRead1=read&cookies=on" method="post">
     <input class="nhsuk-button nhslogin-button nhs-app-u-button-full" type="submit" value="Continue with NHS login">
   </form>
 
